Atualizacao do exercicio flexbox

--- a/semana2/aula6-flexboxGrid/flexboxFroggy.css
+++ b/semana2/aula6-flexboxGrid/flexboxFroggy.css
@@ -71,19 +71,105 @@ justify-content: flex-end;
 }
 
 /* Level 12 */
+#pond {
+  display: flex;
+flex-direction: column-reverse;
+justify-content: space-between;
+}
 
+/* Level 13 */
+#pond {
+  display: flex;
+flex-direction: row-reverse;
+justify-content: center;
+align-items: flex-end;
+}
 
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
-/**/
+/* Level 14*/
+#pond {
+  display: flex;
+}
+
+.yellow {
+order: 1;
+}
+
+/* Level 15*/
+#pond {
+  display: flex;
+}
+
+.red {
+order: -1;
+}
+
+/* Level 16 */
+#pond {
+  display: flex;
+  align-items: flex-start;
+}
+
+.yellow {
+align-self: flex-end;
+}
+
+/* Level 17 */
+#pond {
+  display: flex;
+  align-items: flex-start;
+}
+
+.yellow {
+order: 1;
+align-self: flex-end;
+}
+
+/* Level 18 */
+#pond {
+  display: flex;
+flex-wrap: wrap;
+}
+
+/* Level 19 */
+#pond {
+  display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+}
+
+/* Level 20*/
+#pond {
+  display: flex;
+flex-flow: column wrap;
+}
+
+/* Level 21 */
+#pond {
+  display: flex;
+  flex-wrap: wrap;
+align-content: flex-start;
+}
+
+/* Level 22 */
+#pond {
+  display: flex;
+  flex-wrap: wrap;
+align-content: flex-end;
+}
+
+/* Level 23 */
+#pond {
+  display: flex;
+  flex-wrap: wrap;
+flex-direction: column-reverse;
+align-content: center;
+}
+
+/* Level 24 */
+#pond {
+  display: flex;
+flex-direction: column-reverse;
+flex-wrap: wrap-reverse;
+align-content: space-between;
+justify-content: center;
+}
